RESOLVED FIXED141584
REGRESSION: Page opens with enlarged font after visiting PDF, navigating back, then doing a process swap
https://bugs.webkit.org/show_bug.cgi?id=141584
Summary REGRESSION: Page opens with enlarged font after visiting PDF, navigating back...
Beth Dakin
Reported 2015-02-13 17:38:30 PST
REGRESSION: Page opens with enlarged font after visiting PDF, navigating back, then doing a process swap
Attachments
Patch (7.33 KB, patch)
2015-02-13 17:42 PST, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-02-13 17:42:07 PST
Tim Horton
Comment 2 2015-02-13 17:47:22 PST
Comment on attachment 246562 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246562&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:2830 > // WebPageProxy's cache of the value can get out of sync (e.g. in the case where a > // plugin is handling page scaling itself) so we should reset it to the default > // for standard main frame loads. I wonder if this comment means that this code is only needed in the plugin case and that therefore you don't need to reset m_pageScaleFactor. But I don't really remember.
Beth Dakin
Comment 3 2015-02-14 14:57:01 PST
Note You need to log in before you can comment on or make changes to this bug.